--- a/tasks/python3x.yml
+++ b/tasks/python3x.yml
@@ -81,12 +81,12 @@
   ansible.builtin.include_tasks:
     file: python_generic.yml
   vars:
-    py_data: py312
+    py_data: "{{ py312 }}"
   when: python_312
 
 - name: Install Python 3.13
   ansible.builtin.include_tasks:
     file: python_generic.yml
   vars:
-    py_data: py313
+    py_data: "{{ py313 }}"
   when: python_313
