fix(venvs): remove non-existing variable

--- a/tasks/venv.yml
+++ b/tasks/venv.yml
@@ -6,7 +6,6 @@
     path: "{{ py_data.install }}/bin/virtualenv"
   register: already_installed
   ignore_errors: true
-  when: should_install
 
 - name: "Virtualenv | Download | {{ py_data.version }}"
   ansible.builtin.get_url:
@@ -14,14 +13,14 @@
     dest: "{{ venv_data.tar_file }}"
     checksum: "md5:{{ venv_data.md5 }}"
     mode: "0440"
-  when: should_install and not already_installed.stat.exists
+  when: not already_installed.stat.exists
 
 - name: "Virtualenv | Uncompress | {{ py_data.version }}"
   ansible.builtin.unarchive:
     src: "{{ venv_data.tar_file }}"
     dest: /tmp
     copy: false
-  when: should_install and not already_installed.stat.exists
+  when: not already_installed.stat.exists
 
 - name: " Virtualenv | Install | {{ py_data.version }}"
   become: true
@@ -31,4 +30,4 @@
     creates: "{{ py_data.install }}/bin/virtualenv"
   with_items:
     - "{{ py_data.bin }} setup.py install"
-  when: should_install and not already_installed.stat.exists
+  when: not already_installed.stat.exists
