feat(venvs): split python 2.7 venv creation
Install `virtualenv` with `pip` to ensure it works.

--- a/tasks/venvs.yml
+++ b/tasks/venvs.yml
@@ -18,7 +18,7 @@
 
 - name: Install Virtualenv for Python 2.7
   ansible.builtin.include_tasks:
-    file: venv.yml
+    file: venv27.yml
   vars:
     py_data: "{{ py27 }}"
     venv_data: "{{ venv27 }}"
