fix: py313 data was wrong
Some variables had a typo on them!

--- a/defaults/main/python.yml
+++ b/defaults/main/python.yml
@@ -201,6 +201,6 @@ py313:
   url: "{{ ftp_url }}/{{ versions.py313 }}/Python-{{ versions.py313 }}.tar.xz"
   md5: "{{ hashes.py313 }}"
   tar_file: "/tmp/py{{ versions.py313 }}.tar.xz"
-  sources: "/tmp/Python-{{ versions.3.13 }}"
-  install: "{{ base_install_folder }}/python{{ versions.3.13 }}"
-  bin: "{{ base_install_folder }}/python{{ versions.3.13 }}/bin/python3.13"
+  sources: "/tmp/Python-{{ versions.py313 }}"
+  install: "{{ base_install_folder }}/python{{ versions.py313 }}"
+  bin: "{{ base_install_folder }}/python{{ versions.py313 }}/bin/python3.13"
