--- a/tasks/deps.yml
+++ b/tasks/deps.yml
@@ -20,31 +20,32 @@
     name:
       - python3
 
+# yamllint disable-line rule:line-length
+# Again, see https://devguide.python.org/getting-started/setup-building/#install-dependencies
 - name: Dependencies Python | Install compile time dependencies
   become: true
   ansible.builtin.apt:
     state: present
     name:
-      - autotools-dev
-      - blt-dev
-      - bzip2
-      - dpkg-dev
-      - g++-multilib
-      - gcc-multilib
-      - libbluetooth-dev
+      - build-essential
+      - gdb
+      - lcov
       - libbz2-dev
-      - libexpat1-dev
       - libffi-dev
       - libgdbm-dev
-      - libgpm2
-      - libncursesw5-dev
-      - libreadline-dev
+      - libgdbm-compat-dev
+      - liblzma-dev
+      - libncurses5-dev
+      - libreadline6-dev
       - libsqlite3-dev
       - libssl-dev
-      - libtinfo-dev
-      - net-tools
-      - netbase
+      - libzstd-dev
+      - lzma
+      - lzma-dev
+      - pkg-config
       - tk-dev
+      - uuid-dev
+      - xz-utils
       - zlib1g-dev
 
 - name: Dependencies Python 3.6 | Install compile time dependencies
